refacor:footer / nav-bar 로그인 비로그인 구분

--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -1,142 +1,135 @@
 ## mako
 <%page expression_filter="h"/>
 <%!
-  from django.urls import reverse
-  from django.utils.translation import ugettext as _
-  from branding.api import get_footer
-  from openedx.core.djangoapps.lang_pref.api import footer_language_selector_is_enabled
+from django.core.urlresolvers import reverse
+from django.utils.translation import ugettext as _
+from branding.api import get_footer
 %>
 <% footer = get_footer(is_secure=is_secure) %>
 <%namespace name='static' file='static_content.html'/>
 
-% if uses_bootstrap:
-  <div class="container-fluid wrapper-footer">
-    <footer>
-      <div class="row">
-        <div class="col-md-9">
-          <nav class="navbar site-nav navbar-expand-sm" aria-label="${_('About')}">
-            <ul class="navbar-nav">
-              % for item_num, link in enumerate(footer['navigation_links'], start=1):
-                <li class="nav-item">
-                  <a class="nav-link" href="${link['url']}">${link['title']}</a>
-                </li>
-              % endfor
-            </ul>
-          </nav>
-
-          ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
-          <p class="copyright">${footer['copyright']} ${u" | {icp}".format(icp=getattr(settings,'ICP_LICENSE')) if getattr(settings,'ICP_LICENSE',False) else ""}</p>
-
-          <nav class="navbar legal-nav navbar-expand-sm" aria-label="${_('Legal')}">
-            <ul class="navbar-nav">
-              % for item_num, link in enumerate(footer['legal_links'], start=1):
-                <li class="nav-item">
-                  <a class="nav-link" href="${link['url']}">${link['title']}</a>
-                </li>
-              % endfor
-              <li class="nav-item">
-                <a class="nav-link" href="${footer['edx_org_link']['url']}">${footer['edx_org_link']['text']}</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <div class="col-md-3">
-          ## Please leave this link and use one of the logos provided
-          ## The OpenEdX link may be hidden when this view is served
-          ## through an API to partner sites (such as marketing sites or blogs),
-          ## which are not technically powered by Open edX.
-          % if not hide_openedx_link:
-            <div class="footer-about-openedx">
-              <p>
-                <a href="${footer['openedx_link']['url']}">
-                  <img src="${footer['openedx_link']['image']}" alt="${footer['openedx_link']['title']}" width="140" />
-                </a>
-              </p>
-            </div>
-          % endif
-        </div>
-      </div>
-    </footer>
-  </div>
-% else:
-  <div class="wrapper wrapper-footer">
+<div class="wrapper wrapper-footer">
     <footer id="footer-openedx" class="grid-container"
-      ## When rendering the footer through the branding API,
-      ## the direction may not be set on the parent element,
-      ## so we set it here.
-      % if bidi:
-        dir=${bidi}
-      % endif
+            ## When rendering the footer through the branding API,
+            ## the direction may not be set on the parent element,
+            ## so we set it here.
+            % if bidi:
+            dir=${bidi}
+            % endif
     >
-      <div class="colophon">
-        <nav class="nav-colophon" aria-label="${_('About')}">
-          <ol>
-              % for item_num, link in enumerate(footer['navigation_links'], start=1):
-              <li class="nav-colophon-0${item_num}">
-                <a id="${link['name']}" href="${link['url']}">${link['title']}</a>
-              </li>
-              % endfor
-          </ol>
-        </nav>
 
-        % if context.get('include_language_selector', footer_language_selector_is_enabled()):
-            <%include file="${static.get_template_path('widgets/footer-language-selector.html')}"/>
-        % endif
+        <div class="col col-12 sm-col-6>">
+            <div class="sm-col-6">
+                <nav class="nav-colophon">
+                    <ol>
+                        <li class="nav-colophon-01"><a href="/agreement">${_("Terms of Use")}</a></li>
+                        <li class="nav-colophon-02"><a href="/Privacy-Policy" style="color: #4587c2 !important;"><b>${_("Privacy Statement")}</b></a></li>
+                        % if LANGUAGE_CODE == 'ko-kr':
+                        <li class="nav-colophon-03"><a href="/Copyright-Policy">${_("Copyright Policy")}</a></li>
+                        % endif
 
-        <div class="wrapper-logo">
-          <p>
-            <a href="/">
-              ## The default logo is a placeholder.
-              ## You can either replace this link entirely or update
-              ## the FOOTER_ORGANIZATION_IMAGE in Django settings.
-              ## If you customize FOOTER_ORGANIZATION_IMAGE, then the image
-              ## can be included in the footer on other sites
-              ## (e.g. a blog or marketing front-end) to provide a consistent
-              ## user experience.  See the branding app for details.
-              <img alt="organization logo" src="${footer['logo_image']}">
-            </a>
-          </p>
+                        <!--<li class="nav-colophon-04"><a href="/openapi">${_("OPEN API")}</a></li>-->
+                        <li class="nav-colophon-05"><a href="/cert_check">${_("Certificate Id Check")}</a></li>
+                        <li class="nav-colophon-05"><a href="http://367.co.kr/" target="_blank">${_("HelpU")}</a></li>
+
+                        % if LANGUAGE_CODE == 'en':
+                        <li class="nav-colophon-02"><a href="/comm_faqrequest">${_("Ask a question")}</a></li>
+                        % endif
+                    </ol>
+                    <div class="associate-site-lnk" id="rel_site">
+                        <div id="rel_site_div" style="float: left; margin-right: 10px;">
+                            <select title="관련사이트" id="related_site">
+                                <option>${_("Related sites")}</option>
+                                <option value="http://www.moe.go.kr/">${_("Ministry of Education")}</option>
+                                <option value="http://www.nile.or.kr/">${_("NILE")}</option>
+                                <option value="http://www.all.go.kr">${_("Lifelong Learning Account")}</option>
+                                <option value="http://www.lifelongedu.go.kr/">${_("Lifelong Learning Portal")}</option>
+                            </select>
+                            <!--<input id="go" class="btn-neutral" type="button" title="새창으로 열림" value='${_("move")}' style="border: solid 0px">-->
+                        </div>
+                        <script>
+                            var ua = window.navigator.userAgent;
+                            var msie = ua.indexOf("MSIE ");
+                            $(function () {
+                                if (msie > 0 || !!navigator.userAgent.match(/Trident.*rv\:11\./) || navigator.userAgent.toLowerCase().indexOf('firefox') > -1) {
+                                    $("#related_site").css("width", "180px").css("min-width", "100px");
+                                    //$('#rel_site_div').append('<input class="btn" type="button" id="go" value="이동" title="이동">');
+                                }
+                            });
+                            $(document).on('change', '#related_site', function () {
+                                var url = $('#related_site option:selected').val();
+                                if (url != '관련사이트') {
+                                    //document.location.href = url;
+                                    window.open(url, "", "");
+                                } else {
+                                    alert('관련사이트를 선택하세요.');
+                                }
+
+                            });
+
+
+                            function moveLocation(url) {
+                                if (msie > 0 || !!navigator.userAgent.match(/Trident.*rv\:11\./) || navigator.userAgent.toLowerCase().indexOf('firefox') > -1) {
+
+                                } else {
+                                    //document.location.href = url;
+                                    window.open(url, "", "");
+                                }
+                            }
+                        </script>
+                        <script type="text/javascript" src="https://www.eprivacy.or.kr:40018/seal/mark.js"></script>
+
+                    </div>
+                </nav>
+
+                <div class="associate-icon" style="width: 100%;">
+                    <div style="float: left; margin-top: 15px; margin-right: 40px; margin-bottom: 10px;">
+                        <a href="http://www.moe.go.kr/" target="_blank" title="새창으로 열림"><img style="height: 40px;" src="/static/images/common/logo3.png" alt="moe"/></a>
+                    </div>
+
+                    <div style="float: left; margin-top: 23px; margin-right: 40px; margin-bottom: 10px;">
+                        <a href="http://www.nile.or.kr/" target="_blank" title="새창으로 열림"><img src="/static/images/logo_nile.png" alt="nile"/></a>
+                    </div>
+
+                    <div style="float: left; margin-top: 20px; margin-right: 40px; margin-bottom: 10px;">
+                        <a href="http://www.facebook.com/kmooc" target="_blank" title="새창으로 열림"><img src="/static/images/common/sns1.png" alt="facebook"/></a>
+                        <a href="https://pf.kakao.com/_IZxkxdxl" target="_blank" title="새창으로 열림"><img src="/static/images/common/sns2.png" alt="kakao"/></a>
+                        <a href="https://www.instagram.com/kmooc_/" target="_blank" title="새창으로 열림"><img src="/static/images/common/sns3.png" alt="instagram"/></a>
+                        <a href="http://blog.naver.com/kmooc_kr" target="_blank" title="새창으로 열림"><img src="/static/images/common/sns4.png" alt="blog"/></a>
+                    </div>
+
+                    <div style="float: left; margin-top: 10px; margin-bottom: 10px;">
+
+                        <a href="http://wa.or.kr/board/list.asp?BoardID=0006" target="_blank" title="새창으로 열림"><img src="/static/images/common/footer_icon03.png" alt="한국장애인단체총연합회 한국웹접근성인증평가원 웹 접근성 우수사이트 인증마크"/></a>
+                        <a href="javascript:markPopupE('2017-R099');void(0)" title="새창으로 열림"><img src="https://www.eprivacy.or.kr:40018/seal/mark_e.gif" alt="개인정보보호마크" style="max-width: 50px; margin-top: 5px;"/></a>
+                        <a href="javascript:markPopupI('2018-R001');void(0)" title="새창으로 열림"><img src="https://www.eprivacy.or.kr:40018/seal/mark_i.gif" alt="인터넷사이트안전마크" style="max-width: 50px; margin-top: 5px;"/></a>
+
+                    </div>
+
+                </div>
+            </div>
+
+
+
         </div>
 
-        ## Site operators: Please do not remove this paragraph! This attributes back to edX and makes your acknowledgement of edX's trademarks clear.
-        <p class="copyright">${footer['copyright']} ${u" | {icp}".format(icp=getattr(settings,'ICP_LICENSE')) if getattr(settings,'ICP_LICENSE',False) else ""}</p>
+        <div class="col col-12" style="width: 100%; display: inline-block;">
+            <p class="copyright" style="color: #eee">Copyright(c)2018. 국가평생교육진흥원 (National Institute For Lifelong Education. All right reserved)</p>
+            <p title="(04520) 서울특별시 중구 청계천로 14 (무교동 77)" style="color: #eee">${_("14, Cheonggyecheon-ro, Jung-gu, Seoul, Republic of Korea (04520)")} E-mail:&nbsp; <a href="mailto:kmooc@nile.or.kr" style="color: #0088d0;">kmooc@nile.or.kr</a>
+            </p>
+        </div>
 
-        <nav class="nav-legal" aria-label="${_('Legal')}">
-          <ul>
-            % for item_num, link in enumerate(footer['legal_links'], start=1):
-              <li class="nav-legal-0${item_num}">
-                <a href="${link['url']}">${link['title']}</a>
-              </li>
-            % endfor
-            <li><a href="${footer['edx_org_link']['url']}">${footer['edx_org_link']['text']}</a></li>
-          </ul>
-        </nav>
-      </div>
-
-      ## Please leave this link and use one of the logos provided
-      ## The OpenEdX link may be hidden when this view is served
-      ## through an API to partner sites (such as marketing sites or blogs),
-      ## which are not technically powered by OpenEdX.
-      % if not hide_openedx_link:
-      <div class="footer-about-openedx">
-        <p>
-          <a href="${footer['openedx_link']['url']}">
-            <img src="${footer['openedx_link']['image']}" alt="${footer['openedx_link']['title']}" width="140" />
-          </a>
-        </p>
-      </div>
-      % endif
     </footer>
-  </div>
-% endif
+</div>
+
 % if include_dependencies:
-  <%static:js group='base_vendor'/>
-  <%static:css group='style-vendor'/>
-  <%include file="widgets/segment-io.html" />
-  <%include file="widgets/segment-io-footer.html" />
+<%static:js group='base_vendor'/>
+<%static:css group='style-vendor'/>
+<%include file="widgets/segment-io.html" />
+<%include file="widgets/segment-io-footer.html" />
 % endif
 % if footer_css_urls:
-  % for url in footer_css_urls:
-    <link rel="stylesheet" type="text/css" href="${url}"></link>
-  % endfor
+% for url in footer_css_urls:
+<link rel="stylesheet" type="text/css" href="${url}"></link>
+% endfor
 % endif
