--- a/lms/templates/header/navbar-not-authenticated.html
+++ b/lms/templates/header/navbar-not-authenticated.html
@@ -36,9 +36,17 @@ from six import text_type
   % endif
   % if allows_login:
     % if can_discover_courses:
-      <div class="mobile-nav-item hidden-mobile nav-item">
-        <a href="/courses">${_('Explore courses')}</a>
+    <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
+        <a class="tab-nav-link" href="/about">${_("About Us")}</a>
       </div>
+      <div class="mobile-nav-item hidden-mobile nav-item">
+        <a href="${marketing_link('COURSES')}">${_("Courses")}</a>
+      </div>
+      <div class="mobile-nav-item hidden-mobile nav-item nav-tab">
+          <a class="${'active ' if '/u/' in request.path  else ''}tab-nav-link" href="/schools" data-hover-label='${_("Participating Institutions")}'>
+            ${_("Participating Institutions")}
+          </a>
+        </div>
     %endif
   % endif
   </div>
