--- a/lms/templates/student_account/account_settings.html
+++ b/lms/templates/student_account/account_settings.html
@@ -25,13 +25,33 @@ from webpack_loader.templatetags.webpack_loader import render_bundle
 % endif
 
 <div class="wrapper-account-settings"></div>
+
 <%block name="headextra">
     <%static:css group='style-course'/>
     <link type="text/css" rel="stylesheet" href="${STATIC_URL}paragon/static/paragon.min.css">
 </%block>
 
+
+<!-- nice check -->
+<form id="form2" name="form2" method="post" action="https://nice.checkplus.co.kr/CheckPlusSafeModel/checkplus.cb">
+    <input type="hidden" name="m" value="checkplusSerivce">
+    <input type="hidden" name="EncodeData" value="${enc_data}">
+</form>
+<!-- nice check -->
+
+<!-- nice check test-->
+<div id='user_gender' style='display: none;'>${user_gender}</div>
+<div id='user_birthday' style='display: none;'>${user_birthday}</div>
+<div id='user_name' style='display: none;'>${user_name}</div>
+<div id='nice_check' style='display: none;'>${nice_check}</div>
+<div id='user_id' style='display: none;'>${user.id}</div>
+<!-- nice check test-->
+
 <%block name="js_extra">
 <%static:require_module module_name="js/student_account/views/account_settings_factory" class_name="AccountSettingsFactory">
+console.log('***lms/templates/student_account/account_settings.html-->processing start***');
+console.log('***[doc]module call js/student_account/views/account_settings_factory***');
+console.log('***[doc]class_name: AccountSettingsFactory***');
     var fieldsData = ${ fields | n, dump_js_escaped_json },
         ordersHistoryData = ${ order_history | n, dump_js_escaped_json },
         authData = ${ auth | n, dump_js_escaped_json },
@@ -67,6 +87,9 @@ from webpack_loader.templatetags.webpack_loader import render_bundle
         extendedProfileFields,
         displayAccountDeletion
     );
+console.log('***[doc]data: name: fieldsData***');
+console.log('***[doc]data:', fieldsData);
+console.log('***lms/templates/student_account/account_settings.html-->processing end***');
 </%static:require_module>
 
 <script type="text/javascript">
