--- a/lms/templates/register-form.html
+++ b/lms/templates/register-form.html
@@ -188,11 +188,10 @@ from student.models import UserProfile
     % if settings.REGISTRATION_EXTRA_FIELDS['gender'] != 'hidden':
     <li class="field-group field-gender">
       <div class="field ${settings.REGISTRATION_EXTRA_FIELDS['gender']} select" id="field-gender">
-        <label for="gender">${_("Gender")}</label> <span> * </span>
+        <label for="gender">${_("Gender")}</label>
         <select id="gender" name="gender" ${'required aria-required="true"' if settings.REGISTRATION_EXTRA_FIELDS['gender'] == 'required' else ''}>
-          <option value="">---</option>
+          <option value="">--</option>
           %for code, gender in UserProfile.GENDER_CHOICES:
-          <option value="${code}">=====</option>
           <option value="${code}">${_(gender)}</option>
           %endfor
         </select>
@@ -202,9 +201,9 @@ from student.models import UserProfile
     % if settings.REGISTRATION_EXTRA_FIELDS['year_of_birth'] != 'hidden':
     <li class="field-group field-yob">
       <div class="field ${settings.REGISTRATION_EXTRA_FIELDS['year_of_birth']} select" id="field-yob">
-        <label for="yob">${_("Year of Birth")}</label> <span> * </span>
+        <label for="yob">${_("Year of Birth")}</label>
         <select id="yob" name="year_of_birth" ${'required aria-required="true"' if settings.REGISTRATION_EXTRA_FIELDS['year_of_birth'] == 'required' else ''}>
-          <option value="">---</option>
+          <option value="">--</option>
           %for year in UserProfile.VALID_YEARS:
           <option value="${year}">${year}</option>
           %endfor
