refactor: 강좌생성,중분류,한국학 DB insert/course_overview_addinfo

--- a/cms/templates/index.html
+++ b/cms/templates/index.html
@@ -482,6 +482,10 @@ if (
             //console.log("--------------------------------------------");
             //console.log("bcate selected : "+bcate_val);
             //console.log("--------------------------------------------");
+            console.log("-----------------")
+            console.log(middle_classfy_id)
+            console.log("-----------------")
+
             removeOptions(middle_classfy_id);
             input_middle_classfy(middle_classfy_id, bcate_val);
         }
